# django

./: .env.example  .gitignore  .gitlab-ci.example.yml  CONTRIBUTORS.txt  LICENSE  README.md  db.sqlite3  local.yml  prod.nginx.yml  prod.yml  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .django  .postgres
.envs/.production/: .django.example  .postgres.example
.github/: dependabot.yml
.github/workflows/: ci.yml
app/account/migrations/: 0001_initial.py
app/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
app/core/: apps.py  dynamic_preferences_registry.py  models.py  serializers.py  urls.py  views.py
app/core/app_template/: access_policy.py-tpl  admin.py-tpl  apps.py-tpl  models.py-tpl  serializers.py-tpl  urls.py-tpl  views.py-tpl
app/core/app_template/tests/: factories.py-tpl
app/core/management/commands/: initialize.py  startapp_api.py
app/interview/: access_policy.py  apps.py  models.py  serializers.py  urls.py  views.py
app/interview/tests/: factories.py
app/social/: apps.py
app/static/css/drf-yasg/: style.css  swagger-ui.css
app/templates/drf-yasg/: swagger-ui.html
app/users/: access_policy.py  admin.py  models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/tests/: factories.py
app/utils/: access_policy.py  cache.py  factory.py  global_access_conditions.py  send_file.py  tasks.py  utils.py
app/utils/tests/: test_cache.py
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
compose/production/nginx/: nginx.conf
compose/production/traefik/: traefik.nossl.yml  traefik.yml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
requirements/: base.in  local.in  production.in
